MFH: Fixed bug #27300 (Improved regex for pg_convert()).